Implementación de permisos y eliminacion de UserDetailsAdapter - 2025/09/15